--- a/Minesweeper/WindowsFormsApplication1/WindowsFormsApplication1/Pictures.resx
+++ b/Minesweeper/WindowsFormsApplication1/WindowsFormsApplication1/Pictures.resx
@@ -193,4 +193,16 @@
   <data name="flag" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\flag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="medBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\medBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mediumBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\mediumBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="smallerBackground" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\smallerBackground.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="winning" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\winning.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
