--- a/Minesweeper/WindowsFormsApplication1/WindowsFormsApplication1/Sounds.resx
+++ b/Minesweeper/WindowsFormsApplication1/WindowsFormsApplication1/Sounds.resx
@@ -130,4 +130,7 @@
   <data name="health" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\health.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="finish" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\finish.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
