--- a/WindowsFormsApplication1/Pictures.resx
+++ b/WindowsFormsApplication1/Pictures.resx
@@ -205,4 +205,10 @@
   <data name="winning" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\winning.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Icon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Icon1.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_1230571109126653456rg1024_cartoon_sea_mine_svg_med" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\1230571109126653456rg1024_cartoon_sea_mine.svg.med.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
